--- a/index.html
+++ b/index.html
@@ -1,25 +1,27 @@
 <!DOCTYPE html>
 <html>
-	<body>
+<head>
+	<link rel="stylesheet" type="text/css" href="style.css">
+	<title>HW-Wireframe</title>
+</head>
 
-	<h1> Hello world, I am Ray Shin!</h1>
-	<h3> Web Designer and Web Devloper</h3>
-
-
-	<nav> 
-	<a href="facebook.com">Facebook</a>
-	<a href="LinkedIn.com">Linked</a>
-
-
-
-	</nav>
-
-
-	<h3> Allow me to introduce myself...</h3>
-	<p> Hello I am currently a student who is aspiring to be a web deveoper. I am a full time Quality Assurance Engineer at Mobis Georgia. 
-
-	</body>
-
-
-
+<body>
+	<HEADER>header</HEADER>
+	<nav>nav</nav>
+	<aside>aside</aside>
+	
+	<section>section
+		<div class="article">
+				<p>article</p>
+		</div>
+		<section id="sec-1">
+				<h1>h1, h2, h3</h1>
+		</section>
+		<section id="sec-2">	
+				<p>p</p>		
+		</section>
+	</section>
+	
+	<footer>footer</footer>	
+</body>
 </html>
