--- a/index.html
+++ b/index.html
@@ -12,16 +12,18 @@
 	
 	<section>section
 		<div class="article">
-				<p>article</p>
-		</div>
-		<section id="sec-1">
+			<p>article</p>
+			<section id="h-tag">
 				<h1>h1, h2, h3</h1>
-		</section>
-		<section id="sec-2">	
+			</section>
+			<section id="para">	
 				<p>p</p>		
-		</section>
+			</section>
+		</div>
 	</section>
-	
-	<footer>footer</footer>	
+
+<div id = "footer">footer</div>	
+
 </body>
+
 </html>
